# exercism-learning

./: README.md
python/: .gitignore  pylint.cfg  pyproject.toml
python/armstrong-numbers/: armstrong_numbers.py
python/bank-account/: bank_account.py
python/card-games/: lists.py
python/chaitanas-colossal-coaster/: list_methods.py
python/complex-numbers/: complex_numbers.py
python/currency-exchange/: README.md  exchange.py
python/darts/: darts.py
python/dnd-character/: dnd_character.py
python/ghost-gobble-arcade-game/: README.md  arcade_game.py
python/gigasecond/: gigasecond.py
python/grains/: grains.py
python/guidos-gorgeous-lasagna/: lasagna.py
python/hangman/: hangman.py
python/isbn-verifier/: isbn_verifier.py
python/largest-series-product/: largest_series_product.py
python/little-sisters-essay/: string_methods.py
python/little-sisters-vocab/: strings.py
python/making-the-grade/: loops.py
python/matrix/: matrix.py
python/meltdown-mitigation/: conditionals.py
python/pangram/: pangram.py
python/perfect-numbers/: perfect_numbers.py
python/phone-number/: phone_number.py
python/protein-translation/: protein_translation.py
python/raindrops/: raindrops.py
python/rational-numbers/: rational_numbers.py
python/resistor-color/: resistor_color.py
python/resistor-color-duo/: resistor_color_duo.py
python/reverse-string/: reverse_string.py
python/rna-transcription/: rna_transcription.py
python/robot-name/: robot_name.py
python/series/: series.py
python/space-age/: space_age.py
python/twelve-days/: twelve_days.py
(+40 files in other folders)
