[tool.poetry]
name = "exercism_solutions"
version = "0.1.0"
description = "Solution to exercism exercises in Python (3.7)"
authors = ["Nishant Misra <nishant.mnnit2k9@gmail.com>"]
license = "BSD 3-Clause \"New\" or \"Revised\" License"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
pytest = "^6.2.5"
pip = "^21.2.4"
setuptools = "^57.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
